Fixed media queries format
Fixed media queries format and fixed hide scrollbar name

--- a/css/style.css
+++ b/css/style.css
@@ -186,12 +186,12 @@ a {
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-.art__hide-scrollbar::-webkit-scrollbar {
+.hide-scrollbar::-webkit-scrollbar {
   display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
-.art__hide-scrollbar {
+.hide-scrollbar {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
@@ -200,33 +200,33 @@ a {
 
 @media screen and (max-width: 900px) {
         .subtitle {
-        font-size: 18px;
+                font-size: 18px;
         }
 
         .title {
-        font-size: 50px;
+                font-size: 50px;
         }
 
         .description {
-        font-size: 18px;
-        line-height: 18px;
-        margin: 16px 0px;
+                font-size: 18px;
+                line-height: 18px;
+                margin: 16px 0px;
         }
 }
 
 @media screen and (max-width: 650px) {
         .subtitle {
-        font-size: 18px;
+                font-size: 18px;
         }
 
         .title {
-        font-size: 32px;
+                font-size: 32px;
         }
 
         .description {
-        font-size: 18px;
-        line-height: 18px;
-        margin: 16px 0px;
+                font-size: 18px;
+                line-height: 18px;
+                margin: 16px 0px;
         }
 }
 
@@ -234,67 +234,67 @@ a {
 
 @media screen and (max-width: 900px) {
         .header_menu {
-        display: none;
+                display: none;
         }
 
         .header_menu-mobile {
-        display: flex;
+                display: flex;
         }
 }
 
 @media screen and (max-width: 550px) {
         .header_logo {
-        display: none;
+                display: none;
         }
 
         .contact_btn {
-        padding: 16px 16px;
-        border-radius: 25px;
-        min-width: 50px;
-        outline: none;
-        border: none;
-        font-size: 12px;
-        line-height: 12px;
-        background: var(--fuschia);
-        cursor: pointer;
-        color: var(--color-white);
-        text-transform: uppercase;
+                padding: 16px 16px;
+                border-radius: 25px;
+                min-width: 50px;
+                outline: none;
+                border: none;
+                font-size: 12px;
+                line-height: 12px;
+                background: var(--fuschia);
+                cursor: pointer;
+                color: var(--color-white);
+                text-transform: uppercase;
         } 
 
         .header_menu-mobile img {
-        width: 24px;
-        height: 24px;
+                width: 24px;
+                height: 24px;
         }
 }
 
 /* Weaving media queries */
 @media screen and (max-width: 900px) {
         .hero_weaving-text h2 {
-        font-size: 24px;
+                font-size: 24px;
         }
 }
 
 @media screen and (max-width: 660px) {
         .hero_weaving-text h2 {
-        font-size: 18px;
+                font-size: 18px;
         }
 
         .hero_weaving-text p {
-        font-size: 12px;
-        line-height: 12px;
-        margin: 5px 0px;
+                font-size: 12px;
+                line-height: 12px;
+                margin: 5px 0px;
         }
 }
 
 @media screen and (max-width: 450px) {
         .hero_weaving-text h2 {
-        font-size: 14px;
+                font-size: 14px;
         }
 
         .hero_weaving-text p {
-        font-size: 10px;
-        line-height: 12px;
-        margin: 5px 0px;
+                font-size: 10px;
+                line-height: 12px;
+                margin: 5px 0px;
         }
 }
 
@@ -302,12 +302,12 @@ a {
 
 @media screen and (max-width: 600px) {
         .legacy {
-        padding: 20px 0; 
+                padding: 20px 0; 
         }
 
         .legacy_text-box p {
-        font-size: 18px;
-        padding-bottom: 20px;
+                font-size: 18px;
+                padding-bottom: 20px;
         }
 }
 
@@ -315,52 +315,52 @@ a {
 
 @media screen and (max-width: 900px) {
         .ensemble {
-        padding: 0 10% 5% 10%;
+                padding: 0 10% 5% 10%;
         }
 
         .ensemble_text-box p {
-        font-size: 16px;
-        line-height: 16px;
+                font-size: 16px;
+                line-height: 16px;
         }
 
         .ensemble_content button {
-        padding: 16px 30px;
-        min-width: 50px;
-        font-size: 14px;
-        line-height: 16px;
-        margin-top: 20px;
+                padding: 16px 30px;
+                min-width: 50px;
+                font-size: 14px;
+                line-height: 16px;
+                margin-top: 20px;
         }
 }
 
 @media screen and (max-width: 700px) {
         .ensemble {
-        padding: 0 6% 5% 6%;
+                padding: 0 6% 5% 6%;
         }
 
         .ensemble_header span {
-        font-size: 24px;
+                font-size: 24px;
         }
         
         .ensemble_content {
-        gap: 6px;
-        margin-top: 20px;
+                gap: 6px;
+                margin-top: 20px;
         }
 
         .ensemble_text-box {
-        padding: 0 50px 0 20px;
+                padding: 0 50px 0 20px;
         }
 
         .ensemble_text-box p {
-        font-size: 12px;
-        line-height: 12px;
+                font-size: 12px;
+                line-height: 12px;
         }
 
         .ensemble_content button {
-        padding: 16px 20px;
-        min-width: 30px;
-        font-size: 12px;
-        line-height: 12px;
-        margin-top: 6px;
+                padding: 16px 20px;
+                min-width: 30px;
+                font-size: 12px;
+                line-height: 12px;
+                margin-top: 6px;
         }
 }
 
@@ -368,23 +368,23 @@ a {
 
 @media screen and (max-width: 900px) {
         .footer {
-        padding: 40px 10%;
+                padding: 40px 10%;
         }
 }
 
 @media screen and (max-width: 600px) {
         .footer {
-        padding: 20px 6%;
+                padding: 20px 6%;
         }
 
         .footer_content_text-box h2 {
-        font-size: 24px;
+                font-size: 24px;
         }
 
         .footer_content p,
         .footer_copyright p,
         .footer_privacy a {
-        font-size: 14px;
-        line-height: 16px;
+                font-size: 14px;
+                line-height: 16px;
         }
 }
